# uniffi-rs

./: .envrc  .gitignore  Cargo.toml
docs/manual/src/swift/: configuration.md
fixtures/records-export-methods/: Cargo.toml  build.rs
fixtures/records-export-methods/src/: lib.rs  records_export_methods.udl
fixtures/records-export-methods/tests/: test_generated_bindings.rs
fixtures/records-export-methods/tests/bindings/: test_records_export_methods.swift
fixtures/swift-sendable/: Cargo.toml  README.md  uniffi.toml
fixtures/swift-sendable/src/: lib.rs  test.udl
fixtures/swift-sendable/tests/bindings/: test.swift
uniffi_bindgen/: Cargo.toml
uniffi_bindgen/src/bindings/kotlin/: mod.rs  test_of_bindgen.rs
uniffi_bindgen/src/bindings/kotlin/templates/: NamespaceLibraryTemplate.kt
uniffi_bindgen/src/bindings/kotlin/tests_of_bindgen/: fixture_kotlin.kt  mod.rs  test_of_bindgen.rs
uniffi_bindgen/src/bindings/swift/: test.rs
uniffi_bindgen/src/bindings/swift/gen_swift/: mod.rs
uniffi_bindgen/src/bindings/swift/templates/: EnumTemplate.swift  RecordTemplate.swift
uniffi_bindgen/src/interface/: mod.rs
uniffi_meta/src/: reader.rs
